@@ -1,5 +1,7 @@
 === SVN
 
+* Added AlterTableGenerator#add_full_text_index method.
+
 * Implemented full_text indexing and searching for PostgreSQL adapter (thanks David Lee).
 
 * Implemented full_text indexing and searching for MySQL adapter (thanks David Lee).
